DailyNotes.txt

Cloud Lab Link:
================

https://cloud.cdp.rpsconsulting.in/console/#/


Git Repo:
=========

https://github.com/sandeepsomavarapu/Ericsson_Python_May_2023


Language:
=========
			English--->Communication


Programming Languages:
======================

		communication --->machines
		
		
		
		POP								OOP
B,C,BCPl,COBOl,Pascal.....			c++,java,python,.net,lisp,smaltalk....

	OOPS      OOPL
						
						1)Performance	inheritance,polymorphisam
						2)Security		encapsulation, abstraction
						


Guido Van Russam  1991 feb 20th

3.x  33

Welcome.java

class Welcome
{
public static void main(String args[])
{

System.out.println("welcome to python....");
}


}

		compilation-->execution
		
		
	1)functional programming  C
	2)object oreiented Programming  C++
	3)shell scripting perl and shellscript	
	4)modular programming from module-3
		

Different Applications:
=======================
desktop/standalone  applications  		core python

web applications		DJANGO,Flask gmail URL

IOT

ML

DA

DBA

NWA

Features:
=========

1)simple  33

2)free source and  open source 	jython

3)PI

4)Dynamic typed

	int salary=12345;//static typed 
	salry=23232;
	
	
	Versions
	
	1.x   1991
	2.x   2000
	3.x	  2008	3.11.3


Identifiers:
===============

	a-z
	A-Z
	0-9
	_
	
	cash=230
	ca$h@#

	emp123=1111;

	123emp

Datatypes:
==========

1)int
2)float
3)complex
4)bool
5)str   fundamental datatypes

6)List
7)Tuple
8)dict
9)Set
10)forzenset
11)None



type()

id()

print()

int()
float()
complex()
bool()
str()


C:\Users\SANDEEP>python --version
Python 3.11.0

C:\Users\SANDEEP>py
Python 3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> print("welcome to python")
welcome to python
>>> name='ericsson'
>>> print(name)
ericsson
>>> emp_123=999
>>> print(emp_123)
999
>>> 123emp=999
  File "<stdin>", line 1
    123emp=999
      ^
SyntaxError: invalid decimal literal
>>> type(name)
<class 'str'>
>>> type(emp_123)
<class 'int'>
>>> salary=23.345
>>> type(salary)
<class 'float'>
>>> import keyword
>>> keyword.kwlist
['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']
>>> result=True
>>> type(result)
<class 'bool'>
>>> marks=1234
>>> type(marks)
<class 'int'>
>>> qwerty=3+4j
>>> type(qwerty)
<class 'complex'>
>>> result=false
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'false' is not defined. Did you mean: 'False'?
>>> result=False
>>> result="False"
>>> type(result)
<class 'str'>
>>> orgName="ericsson"
>>> a="ericsson"
>>> a[0]
'e'
>>> a[-2]
'o'
>>> a[-8]
'e'
>>> a[1:3]
'ri'
>>> a[0:2]
'er'
>>> a[:5]
'erics'
>>> a[1:]
'ricsson'
>>> a[1:50]
'ricsson'
>>> len(a)
8
>>> salary="12345"
>>> print(salary+1000)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> type(salary)
<class 'str'>
>>> a=salary+100
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> print(salary)
12345
>>> a=print(salary)
12345
>>> type(a)
<class 'NoneType'>
>>> a=int(salary)
>>> type(a)
<class 'int'>
>>> print(a)
12345
>>> print(a+1000)
13345
>>> str(a)
'12345'
>>> val=True
>>> type(val)
<class 'bool'>
>>> str(val)
'True'
>>> int("10")
10
>>> int("ten")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: 'ten'
>>> float("10")
10.0
>>> float("10.89")
10.89
>>> complex(10)
(10+0j)
>>> complex(10.15)
(10.15+0j)
>>> bool(0)
False
>>> bool(1)
True
>>> bool(12)
True
>>> bool("")
False
>>> bool("True")
True
>>> bool("False")
True
>>>




